src/components/uiBlock/_uiBlock--info.scss
.uiBlock {
    margin-top: 3rem;
    margin-bottom: 3rem;
    &:not(:first-of-type):before {
        background-image: url('../info/img/bloomington-section-divider-mobile.svg');
        background-position: 50% 50%;
        background-repeat: no-repeat;
        background-size: contain;
        content: ' ';
        display: block;
        margin: 2rem -1rem;
        width: auto;
        height: 2.5rem;
        @media screen and (min-width: $viewport-medium) {
            background-image: url('../info/img/bloomington-section-divider.svg');
            margin: 4rem -1rem;
        }
    }
    &-header {
        @include container();
    }
    &-portraitSidebar {
        padding-right: $grid-gutter;
        padding-left: $grid-gutter;
        & + .uiBlock-content {
            padding-left: $grid-gutter;
            padding-right: $grid-gutter;
        }
    }
    &-title {
        color: $blue-darkest;
        font-size: (20rem/16);
        font-weight: 400;
        margin-top: 1em;
        margin-left: $grid-gutter;
        &--centered {
            // Make sure we apply this theme's styles to centered headings, as well.
            @extend .uiBlock-title;
        }
    }
    &-content {
        // Treat uiBlock-content as a Grid Row element.
        // We can't use the clearfix mixin, because the :before
        // pseudo-element is already in use for section dividers,
        // so use :after to clear floats instead.
        &:after {
            content: '';
            display: table;
            width: 100%;
        }
    }
    @media screen and (min-width: $viewport-medium) {
        &-title {
            font-size: (28rem/16);
            margin-top: .75em;
        }
        &-portraitSidebar {
            $sidebarWidth: (100%*4.5/12); // <- 5 columns in a 12 column parent
            width: $sidebarWidth;
            & + .uiBlock-content {
                margin-left: $sidebarWidth;
                padding-left: $grid-gutter*3;
                .description {
                    font-size: (20rem/16);
                }
            }
        }
    }
    @media screen and (min-width: $viewport-large) {
        &-title {
            font-size: (36rem/16);
            font-weight: 300;
            margin-top: .75em;
            &.mod-xl {
                font-size: (48rem/16);
                margin-top: 1.25em;
            }
        }
    }
}

